// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Category example with text 1`] = `
<div
  className="css-6s6wkd"
>
  <div
    className="css-mcxz16"
  >
    <h1
      className="css-8jec5u"
    >
      Title goes here
    </h1>
    <p
      className="css-1vldmzr"
    >
      Text goes here
    </p>
  </div>
</div>
`;

exports[`Storyshots Elements|Category example without text 1`] = `
<div
  className="css-6s6wkd"
>
  <div
    className="css-mcxz16"
  >
    <p
      className="css-8jec5u"
    >
      Title goes here
    </p>
  </div>
</div>
`;
